[package]
name = "bigqueue"
version = "0.0.2"
authors = ["huangchengyu <castellan75@gmail.com>"]
edition = "2018"

[dependencies]
memmap = "0.7"
byteorder = "1.3"
lru = "0.1.16"
failure = "0.1"
failure_derive = "0.1"
#bytebuffer = "0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "enqueue_benchmark"
harness = false

[workspace]
members = [
"examples/simple",
"examples/spsc",
]
